# Game-Ai

./: .clang-tidy  .gitignore  CMakeLists.txt  README.txt
ai_layer/: CMakeLists.txt  README.txt  t_defines.cpp  t_defines.hpp
ai_layer/gob/: t_gob_brain.cpp  t_gob_brain.hpp  t_gob_node.cpp  t_gob_node.hpp  t_gob_runner.cpp  t_gob_runner.hpp  t_gob_transition.cpp  t_gob_transition.hpp
ai_layer/gob/behaviors/: t_1d_linear_moving_behavior.cpp  t_1d_linear_moving_behavior.hpp  t_idle_behavior.cpp  t_idle_behavior.hpp
ai_layer/gob/goals/: t_goal_is_arrived.cpp  t_goal_is_arrived.hpp  t_goal_selector_and.cpp  t_goal_selector_and.hpp  t_goal_selector_or.cpp  t_goal_selector_or.hpp
ai_layer/gob/interfaces/: t_behavior_interface.cpp  t_behavior_interface.hpp  t_goal_interface.cpp  t_goal_interface.hpp
demo/demo_brain_for_shooting/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  t_ai_shooting_brain_system.cpp  t_ai_shooting_brain_system.hpp  t_component_contexts_and_systems.cpp  t_component_contexts_and_systems.hpp  t_drawable_weapon_locating_system.hpp  t_enemy_spawn_system.cpp  t_enemy_spawn_system.hpp  t_projectile_collision_system.cpp  t_projectile_collision_system.hpp  t_shooting_ai_brain_system.cpp  t_shooting_game_scene.hpp  t_shooting_game_scene_creator.cpp  t_shooting_game_scene_creator.hpp
demo_layer/demo_shooting_brain/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  t_colliding_projectile_system.cpp  t_colliding_projectile_system.hpp  t_component_contexts_and_systems.cpp  t_component_contexts_and_systems.hpp  t_defines.hpp  t_drawable_weapon_locating_system.cpp  t_drawable_weapon_locating_system.hpp  t_enemy_spawn_system.cpp  t_enemy_spawn_system.hpp  t_projectile_collision_system.cpp  t_projectile_moving_system.cpp  t_projectile_moving_system.hpp  t_remove_projectile_event.cpp  t_removing_projectile_system.cpp  t_removing_projectile_system.hpp  t_shooting_ai_brain_system.cpp  t_shooting_ai_brain_system.hpp  t_shooting_game_scene.cpp  t_shooting_game_scene.hpp  t_shooting_game_scene_creator.cpp  t_weapon_cooldown_system.cpp  t_weapon_cooldown_system.hpp
drawing_layer/Demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
ecs_layer/: CMakeLists.txt  README.txt  main.cpp  t_chassis_rotation.cpp  t_chassis_rotation.hpp  t_chassis_settings.cpp  t_chassis_settings.hpp  t_component_defines.cpp  t_component_defines.hpp  t_component_holder.cpp  t_component_holder.hpp  t_component_manager.cpp  t_component_manager.hpp  t_entry_holder.cpp  t_entry_holder.hpp  t_entry_holder_aggregator.hpp  t_game_database.cpp  t_game_database.hpp  t_game_scene.cpp  t_game_scene.hpp  t_get_component_holder.hpp  t_system_manager.cpp  t_system_manager.hpp
ecs_layer/caches/: t_rotating_heading_to_course_cache.cpp  t_rotating_heading_to_course_cache.hpp  t_rotating_heading_to_course_component.cpp  t_rotating_heading_to_course_component.hpp  t_rotating_to_course_cache.cpp  t_rotating_to_course_cache.hpp
ecs_layer/components/: t_ai_demo_movable_component.cpp  t_ai_demo_movable_component.hpp  t_braking_control_component.cpp  t_braking_control_component.hpp  t_braking_distance_component.cpp  t_braking_distance_component.hpp  t_chassis_component.cpp  t_chassis_component.hpp  t_detected_component.hpp  t_detected_enemy_component.cpp  t_detected_enemy_component.hpp  t_engine_component.cpp  t_engine_component.hpp  t_gun_component.cpp  t_gun_component.hpp  t_heading_speed_component.hpp  t_movement_component.hpp  t_radio_component.cpp  t_radio_component.hpp  t_shell_component.cpp  t_shell_component.hpp  t_turret_component.cpp  t_turret_component.hpp  t_vehicle_component.cpp  t_vehicle_component.hpp  t_vehicle_entity.cpp  t_vehicle_entity.hpp  t_visibility_component.cpp  t_visibility_component.hpp
ecs_layer/effects/: t_burning_effect.cpp  t_burning_effect.hpp  t_damaged_ammunition_stowage.cpp  t_damaged_ammunition_stowage.hpp  t_shell_shock_effect.cpp  t_shell_shock_effect.hpp
ecs_layer/interfaces/: t_effect_interface.cpp  t_effect_interface.hpp  t_input_device_updatable_interface.cpp  t_input_device_updatable_interface.hpp  t_sound_player_interface.cpp  t_sound_player_interface.hpp  t_updatable_interface.cpp  t_updatable_interface.hpp
ecs_layer/systems/: t_ai_demo_linear_moving_system.cpp  t_ai_demo_linear_moving_system.hpp  t_braking_control_system.cpp  t_braking_control_system.hpp  t_braking_distance_system.cpp  t_braking_distance_system.hpp  t_detecting_enemy_system.cpp  t_detecting_enemy_system.hpp  t_radio_transmitting_system.cpp  t_radio_transmitting_system.hpp  t_ramping_vehicle_speed_system.cpp  t_ramping_vehicle_speed_system.hpp  t_rotating_to_course_system.cpp  t_rotating_to_course_system.hpp  t_rotating_vehicle_system.cpp  t_rotating_vehicle_system.hpp  t_rotating_vehicle_to_course_system.cpp  t_rotating_vehicle_to_course_system.hpp  t_self_detecting_enemy_system.cpp  t_self_detecting_enemy_system.hpp
ecs_layer/systems/concepts/: t_double_buffering_team_player_holding_system.cpp  t_double_buffering_team_player_holding_system.hpp  t_double_buffering_team_player_lookup_subsystem.cpp  t_double_buffering_team_player_lookup_subsystem.hpp  (+2 more)
ecs_layer/tools/: t_2d_vector.cpp  t_2d_vector.hpp  t_quaternion.hpp
test_case_layer/: CMakeLists.txt  t_helper.cpp  t_helper.hpp  test_braking_control_system.cpp  test_detecting_enemy_system.cpp  test_double_buffering_team_player_lookup_subsystem.cpp  test_game_database.cpp  test_ramping_up_vehicle_speed_subsystem.cpp  test_range_from_minus_360_to_plus_360.cpp  test_self_detecting_enemy_system.cpp  test_shell_shock_effect.cpp  test_vehicle_entity.cpp  test_vehicle_speed.cpp
test_case_layer/mocks/: mock_sound_player.hpp
test_cases_layer/: CMakeLists.txt  test_detecting_enemy_system.cpp  test_double_buffering_team_player_lookup_system.cpp  test_double_buffering_team_player_system.cpp  test_game_database.cpp  test_ramping_down_vehicle_speed_subsystem.cpp  test_ramping_up_vehicle_speed_subsystem.cpp  test_range_from_minus_360_to_plus_360.cpp  test_shell_shock_effect.cpp  test_vehicle_entity.cpp
test_cases_layer/mocks/: mock_sound_player.hpp
(+17 files in other folders)
